---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2023-03-11

  Changes:
    - Removed the `/undeletable-fluids-nullius-preset` command, which will now be auto-applied when Nullius is detected.

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2022-11-23

  Changes:
    - Added "minimum threshold" setting, which allows tanks and pipes to be deleted when they only have a little amount of fluid (default: 100).

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2022-10-13

  Features:
    - Initial release.