@@ -2,6 +2,8 @@
 Version: 1.0.3
 Date: ????
   Changes:
+    - Added "deletable fluids" remote interface methods: `get/set/add/remove_deletable_fluid`. This can be used instead of the "undeletable" list by mods who want to restrict all fluids except a few. The "undeletable" list will be ignored if the "deletable" list is used.
+
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.2
 Date: 2023-03-11
